[gd_scene format=3 uid="uid://iqpcl2tt5bmw"]

[ext_resource type="Script" uid="uid://bv5eccbxau8rr" path="res://scenes/boss/boss.gd" id="1_atjq5"]
[ext_resource type="Script" uid="uid://d1h18hi41diby" path="res://scripts/resource_definitions/enemy_stats.gd" id="2_qrh7f"]
[ext_resource type="Texture2D" uid="uid://b3bqkqiqp6nt3" path="res://assets/gfx/boss_sheet.png" id="3_0xsra"]
[ext_resource type="AudioStream" uid="uid://cb36louskel5e" path="res://assets/sfx/fgj26-death-01.ogg" id="4_22hgk"]
[ext_resource type="Texture2D" uid="uid://dbycows1hxoit" path="res://assets/gfx/grenade.png" id="5_iva7r"]
[ext_resource type="Texture2D" uid="uid://djf5pxumkh4k8" path="res://assets/gfx/target_sheet.png" id="6_i4fbv"]

[sub_resource type="Resource" id="Resource_0xsra"]
script = ExtResource("2_qrh7f")
health = 500
movement_speed = 60.0
attack_delay = 0.4
attack_damage = 40
score = 10000
metadata/_custom_type_script = "uid://d1h18hi41diby"

[sub_resource type="AtlasTexture" id="AtlasTexture_2mupd"]
atlas = ExtResource("3_0xsra")
region = Rect2(0, 64, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_p4gry"]
atlas = ExtResource("3_0xsra")
region = Rect2(96, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_iva7r"]
atlas = ExtResource("3_0xsra")
region = Rect2(0, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_i4fbv"]
atlas = ExtResource("3_0xsra")
region = Rect2(96, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0xsra"]
atlas = ExtResource("3_0xsra")
region = Rect2(0, 128, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7kbl1"]
atlas = ExtResource("3_0xsra")
region = Rect2(96, 128, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wf233"]
atlas = ExtResource("3_0xsra")
region = Rect2(0, 64, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dlpkd"]
atlas = ExtResource("3_0xsra")
region = Rect2(96, 64, 96, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_7kbl1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2mupd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p4gry")
}],
"loop": false,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_iva7r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i4fbv")
}],
"loop": true,
"name": &"idle",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0xsra")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7kbl1")
}],
"loop": true,
"name": &"rampage",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wf233")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dlpkd")
}],
"loop": false,
"name": &"throw",
"speed": 2.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_22hgk"]
size = Vector2(13, 16.42857)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_qrh7f"]
height = 56.0

[sub_resource type="CircleShape2D" id="CircleShape2D_oitbj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qrh7f"]
size = Vector2(6.3333335, 16)

[sub_resource type="Animation" id="Animation_qrh7f"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_22hgk"]
resource_name = "dead"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, -1.5934856]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.93333334),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"remove_enemy"
}]
}

[sub_resource type="Animation" id="Animation_gh66w"]
resource_name = "hurt"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(2.6211514, 2.6211514, 2.6211514, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pp7cr"]
_data = {
&"RESET": SubResource("Animation_qrh7f"),
&"dead": SubResource("Animation_22hgk"),
&"hurt": SubResource("Animation_gh66w")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_tdkbu"]
atlas = ExtResource("6_i4fbv")
region = Rect2(0, 0, 100, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_rrgoe"]
atlas = ExtResource("6_i4fbv")
region = Rect2(100, 0, 100, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_pxtfd"]
atlas = ExtResource("6_i4fbv")
region = Rect2(200, 0, 100, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_uonfg"]
atlas = ExtResource("6_i4fbv")
region = Rect2(300, 0, 100, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_whqtw"]
atlas = ExtResource("6_i4fbv")
region = Rect2(400, 0, 100, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_1q0wb"]
atlas = ExtResource("6_i4fbv")
region = Rect2(500, 0, 100, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_1cw1b"]
atlas = ExtResource("6_i4fbv")
region = Rect2(600, 0, 100, 60)

[sub_resource type="SpriteFrames" id="SpriteFrames_wxk8e"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tdkbu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rrgoe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pxtfd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uonfg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_whqtw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1q0wb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1cw1b")
}],
"loop": false,
"name": &"default",
"speed": 7.0
}]

[node name="Boss" type="CharacterBody2D" unique_id=934439360 groups=["Enemy"]]
y_sort_enabled = true
texture_filter = 1
collision_layer = 2
collision_mask = 23
motion_mode = 1
script = ExtResource("1_atjq5")
stat = SubResource("Resource_0xsra")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." unique_id=447994210]
texture_filter = 1
position = Vector2(-2, -11)
sprite_frames = SubResource("SpriteFrames_7kbl1")
animation = &"rampage"
autoplay = "idle"

[node name="EnemyCollision" type="CollisionShape2D" parent="." unique_id=1900141297]
position = Vector2(-1, 15.25)
scale = Vector2(2, 0.7)
shape = SubResource("RectangleShape2D_22hgk")

[node name="HitBox" type="Area2D" parent="." unique_id=1668721932 groups=["EnemyHitbox"]]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox" unique_id=742033414]
position = Vector2(-3, -10)
shape = SubResource("CapsuleShape2D_qrh7f")

[node name="PlayerDetectionArea" type="Area2D" parent="." unique_id=743462244]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetectionArea" unique_id=1364154775]
visible = false
position = Vector2(-2, -10)
scale = Vector2(6, 6)
shape = SubResource("CircleShape2D_oitbj")

[node name="PlayerHitArea" type="Area2D" parent="." unique_id=1917836694]
collision_layer = 2

[node name="CollisionShape" type="CollisionShape2D" parent="PlayerHitArea" unique_id=352834710]
position = Vector2(18, -13)
scale = Vector2(3, 2)
shape = SubResource("RectangleShape2D_qrh7f")

[node name="DebugState" type="Label" parent="." unique_id=863047750]
offset_left = -21.0
offset_top = -65.0
offset_right = 19.0
offset_bottom = -42.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="." unique_id=2008082720]
libraries/ = SubResource("AnimationLibrary_pp7cr")

[node name="DeathSound" type="AudioStreamPlayer2D" parent="." unique_id=2139732667]
stream = ExtResource("4_22hgk")

[node name="AttackDelayTimer" type="Timer" parent="." unique_id=639037329]

[node name="BottleSprite" type="Sprite2D" parent="." unique_id=861569876]
visible = false
rotation = -1.5707964
texture = ExtResource("5_iva7r")

[node name="BottleLaunchPosition" type="Node2D" parent="." unique_id=1385763488]
position = Vector2(0, -35)

[node name="BottleHitIndicator" type="AnimatedSprite2D" parent="." unique_id=1127624511]
visible = false
z_index = -99
z_as_relative = false
y_sort_enabled = true
sprite_frames = SubResource("SpriteFrames_wxk8e")

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="area_entered" from="PlayerDetectionArea" to="." method="_on_player_detection_area_area_entered"]
[connection signal="area_entered" from="PlayerHitArea" to="." method="_on_player_hit_area_area_entered"]
[connection signal="area_exited" from="PlayerHitArea" to="." method="_on_player_hit_area_area_exited"]
